[test] File 클래스 삭제에 따른 테스트 코드 수정